AM_CXXFLAGS = \
	-std=c++11 \
	-Wall \
	-I$(top_srcdir)/gbemu-lib/include

SUBDIRS = \
	gbemu-lib \
	gbemu-as

EXTRA_DIST = \
	LICENSE.txt

MAINTAINERCLEANFILES = \
	Makefile \
	Makefile.in \
	aclocal.m4 \
	autom4te.cache \
	compile \
	config.guess \
	config.log \
	config.status \
	config.sub \
	configure \
	depcomp \
	install-sh \
	libtool \
	ltmain.sh \
	missing
