SUBDIRS = \
	gbemu-lib \
	gbemu-as  \
	gbemu-play

EXTRA_DIST = \
	LICENSE.txt

MAINTAINERCLEANFILES = \
	Makefile \
	Makefile.in \
	aclocal.m4 \
	autom4te.cache \
	compile \
	config.guess \
	config.log \
	config.status \
	config.sub \
	configure \
	depcomp \
	install-sh \
	libtool \
	ltmain.sh \
	missing
